--- a/servicios.html
+++ b/servicios.html
@@ -33,7 +33,7 @@
     </main>
 
     <footer>
-        <p>&copy; <?php echo date("Y"); ?> Axionova Consulting. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Axionova Consulting. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
